2009-02-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2950773 ] Leak in indCIMXMLHandler.c

2010-02-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopServerProvider.c:
	[ 2949454 ] Memory leak in ServerProviderInitInstances()

2010-02-19  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* *.c, *.h:
	[ 2955196 ] Pretty print

2010-02-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am:
	[ 2948812 ] footprint.pl missing from release tarball

2010-02-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 2946885 ] BEAM errors found in cimXmlGen

	* classProvider.c:
	[ 2946890 ] classProvider may try to closedir(NULL)

2010-02-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am:
	[ 2931327 ] sblim-sfcb-1.3.6 tarball is incomplete

2010-02-04  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 2946101 ] possible race condition initializing providers

2010-02-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, elementCapabilitiesProvider.c:
	Cleaned up unused vars

	* interopProvider.c:
	[ 2945277 ] SFCB crashes on subscription without filter or handler prop 
	(patch by Klaus Kampf)

2010-02-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2932809 ] sfcb 1.3.6 crashes when provider user is set to sfcb
	(updated patch)

2010-02-01  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* Makefile.am
	[ 2875050 ] default MOFs should allow for multiple files ( fixed the build breaks while make install )

2010-01-28  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* Makefile.am:
	[ 2875050 ] default MOFs should allow for multiple files

2010-01-28 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/tests/GenMI.pl, IndRetryTest.sh, RICreateHandler.XML
	  RIEnumIS.XML, RIGetSub.XML, Makefile.am:
	[ 2920773 ] Tests for reliable indications

2010-01-28  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* providerDrv.c: