@@ -23,6 +23,7 @@
 
 #include <signal.h>
 #include <time.h>
+#include <pthread.h>
 
 #include "cmpidt.h"
 #include "providerRegister.h"
@@ -61,6 +62,7 @@ int             enumUnLock(CMPIEnumeration *);
 #define SFCB_ASM(x)
 #endif
 
+static pthread_mutex_t resultsocketMutex = PTHREAD_MUTEX_INITIALIZER;
 
 extern CMPIBroker *Broker;
 
@@ -1136,9 +1138,10 @@ getProviderContext(BinRequestContext * ctx, OperationHdr * ohdr)
   ((OperationHdr *) buf)->className.data = (void *) l;
   l += ohdr->className.length;
 
-  if (localMode)
+  if (localMode) {
+    pthread_mutex_lock(&resultsocketMutex);
     sockets = resultSockets;
-  else
+  } else
     sockets = getSocketPair("getProviderContext");
 
   _SFCB_TRACE(1,
@@ -1152,9 +1155,13 @@ getProviderContext(BinRequestContext * ctx, OperationHdr * ohdr)
 	  "--- spSendReq/spSendMsg failed to send on %d (%d)\n",
 	  sfcbSockets.send, rc);
     ctx->rc = rc;
-    close(sockets.send);
-    close(sockets.receive);
-    return rc;
+    if (!localMode) {
+      closeSocket(&sockets,COM_ALL,"getProviderContext");
+    } else {
+       pthread_mutex_unlock(&resultsocketMutex);
+    }
+    _SFCB_RETURN(rc);
+
   }
 
   _SFCB_TRACE(1, ("--- Sending mgr request done"));
@@ -1199,8 +1206,9 @@ getProviderContext(BinRequestContext * ctx, OperationHdr * ohdr)
   }
 
   if (!localMode) {
-    close(sockets.send);
-    close(sockets.receive);
+     closeSocket(&sockets,COM_ALL,"getProviderContext");
+  } else {
+     pthread_mutex_unlock(&resultsocketMutex);
   }
   _SFCB_RETURN(ctx->rc);
 }
@@ -1411,19 +1419,21 @@ invokeProvider(BinRequestContext * ctx)
   ComSockets      sockets;
   _SFCB_ENTER(TRACE_PROVIDERMGR | TRACE_CIMXMLPROC, "invokeProvider");
 
-  if (localMode)
+  if (localMode) {
+    pthread_mutex_lock(&resultsocketMutex);
     sockets = resultSockets;
-  else
+  } else
     sockets = getSocketPair("invokeProvider");
 
   BinResponseHdr *resp = intInvokeProvider(ctx, sockets);
 
   if (!localMode) {
-    close(sockets.receive);
-    close(sockets.send);
+    closeSocket(&sockets,COM_ALL,"invokeProvider");
+  } else {
+    pthread_mutex_unlock(&resultsocketMutex);
   }
 
-  return resp;
+  _SFCB_RETURN(resp);
 }
 
 BinResponseHdr **
@@ -1434,9 +1444,10 @@ invokeProviders(BinRequestContext * binCtx, int *err, int *count)
   ComSockets      sockets;
   int             i;
 
-  if (localMode)
+  if (localMode) {
+    pthread_mutex_lock(&resultsocketMutex);
     sockets = resultSockets;
-  else
+  } else
     sockets = getSocketPair("invokeProvider");
 
   resp = malloc(sizeof(BinResponseHdr *) * (binCtx->pCount));
@@ -1462,8 +1473,9 @@ invokeProviders(BinRequestContext * binCtx, int *err, int *count)
   }
 
   if (!localMode) {
-    close(sockets.receive);
-    close(sockets.send);
+    closeSocket(&sockets,COM_ALL,"invokeProvider");
+  } else {
+    pthread_mutex_unlock(&resultsocketMutex);
   }
 
   _SFCB_RETURN(resp);
