@@ -9,7 +9,7 @@ Bugs fixed:
 - 2955916 Pretty print
 - 2949454 Memory leak in ServerProviderInitInstances()
 - 2950773 Leak in indCIMXMLHandler.c
-
+- 2952912 resultSockets variable is not used threadsafe
 
 Changes in 1.3.8
 ================
