@@ -1,3 +1,9 @@
+2010-02-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* providerMgr.c:
+	[ 2952912 ] resultSockets variable is not used threadsafe 
+	(patch by Till Steinbach )
+
 2009-02-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* indCIMXMLHandler.c:
